--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,7 +25,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello World!"
+            android:text=""
             android:id="@+id/textView"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
@@ -80,6 +80,7 @@
             android:layout_alignTop="@+id/button"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
+
     </RelativeLayout>
 
     <LinearLayout
