--- a/app/src/main/res/layout/fragment_time_table.xml
+++ b/app/src/main/res/layout/fragment_time_table.xml
@@ -3,11 +3,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.fragments.TimeTableFragment">
 
-    <TextView
-        android:id="@+id/textView"
+   <androidx.recyclerview.widget.RecyclerView
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:id="@+id/timeTableRecycler"
+       app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+       android:orientation="vertical"
+       android:padding="5dp"
+       tools:itemCount="5"
+       tools:listitem="@layout/timetablelist_item"/>
+
+    <ProgressBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:id="@+id/progress_circular"
+        android:layout_gravity="center"
+        android:visibility="gone"/>
 </FrameLayout>
