--- a/app/src/main/res/layout/activity_finger_print.xml
+++ b/app/src/main/res/layout/activity_finger_print.xml
@@ -97,6 +97,11 @@
         android:text="Status Message" />
 
 
-
+<ProgressBar
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_centerInParent="true"
+    android:id="@+id/progress_circular"
+    android:visibility="gone"/>
 
 </RelativeLayout>
