--- a/app/src/main/res/layout/attendancelist_item.xml
+++ b/app/src/main/res/layout/attendancelist_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -31,9 +32,10 @@
 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:background="@drawable/background"
             android:orientation="horizontal"
-            android:layout_marginTop="10dp">
+            tools:visibility="gone">
 
             <Spinner
                 android:id="@+id/spinner"
@@ -41,9 +43,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="4"
+                android:background="@android:color/transparent"
                 android:gravity="center"
                 android:padding="8dp"
-                android:background="@android:color/transparent"
                 android:spinnerMode="dropdown" />
 
             <ImageView
