--- a/app/src/main/res/layout/attendancelist_item.xml
+++ b/app/src/main/res/layout/attendancelist_item.xml
@@ -28,6 +28,13 @@
             android:layout_marginTop="5dp"
             />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/txtSubjectName"
+            android:layout_marginTop="5dp"
+            />
+
         <LinearLayout
 
             android:layout_width="wrap_content"
