--- a/app/src/main/res/layout/attendancelist_item.xml
+++ b/app/src/main/res/layout/attendancelist_item.xml
@@ -40,7 +40,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:background="@drawable/background"
             android:orientation="horizontal"
             tools:visibility="gone">
 
@@ -53,13 +52,15 @@
                 android:background="@android:color/transparent"
                 android:gravity="center"
                 android:padding="8dp"
-                android:spinnerMode="dropdown" />
+                android:spinnerMode="dropdown"
+                android:visibility="gone"/>
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="1"
+                android:visibility="gone"
                 android:src="@drawable/ic_baseline_arrow_drop_down_24" />
 
         </LinearLayout>
