--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,11 +15,11 @@
         <ImageView
             android:id="@+id/imgLogo"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@drawable/biglogo"
+            android:layout_height="100dp"
+            android:contentDescription="@string/todo"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
-            android:contentDescription="@string/todo" />
+            android:src="@drawable/biglogo" />
 
         <LinearLayout
             android:layout_below="@+id/imgLogo"
