--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -38,7 +38,7 @@
                     android:hint="@string/enter_first_name"
                     android:id="@+id/etFirstName"
                     android:imeOptions="actionNext"
-                    android:textAllCaps="true"
+                    android:inputType="textCapCharacters"
                     />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -54,8 +54,7 @@
                     android:hint="@string/enter_last_name"
                     android:id="@+id/etLastName"
                     android:imeOptions="actionNext"
-                    android:textAllCaps="true"
-
+                    android:inputType="textCapCharacters"
                     />
             </com.google.android.material.textfield.TextInputLayout>
 
