--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,10 +11,10 @@
     <ImageView
         android:id="@+id/imageViewLogo"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="300dp"
         android:layout_centerInParent="true"
         android:contentDescription="@string/todo"
-        android:src="@drawable/logo" />
+        android:src="@drawable/sunlogo" />
 
 
     <com.google.android.material.textfield.TextInputLayout
@@ -54,8 +54,8 @@
             android:id="@+id/btnLogin"
             android:text="@string/login"
             android:layout_weight="1"
-            android:layout_margin="3dp"
-            android:textSize="10sp"
+            android:layout_margin="2dp"
+            android:textSize="8sp"
             tools:ignore="SmallSp" />
 
         <com.google.android.material.button.MaterialButton
@@ -64,8 +64,8 @@
             android:id="@+id/btnRegister"
             android:text="@string/registration"
             android:layout_weight="1"
-            android:layout_margin="3dp"
-            android:textSize="10sp"
+            android:layout_margin="2dp"
+            android:textSize="8sp"
             tools:ignore="SmallSp" />
 
         <com.google.android.material.button.MaterialButton
@@ -73,9 +73,9 @@
             android:layout_height="wrap_content"
             android:id="@+id/btnAttendance"
             android:text="@string/attendance"
-            android:layout_margin="3dp"
+            android:layout_margin="2dp"
             android:layout_weight="1"
-            android:textSize="10sp"
+            android:textSize="8sp"
             tools:ignore="SmallSp" />
 
     </LinearLayout>
