--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -23,7 +23,7 @@
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_gravity="center_horizontal"
-                android:src="@drawable/logo"
+                android:src="@drawable/sunlogo"
                 android:contentDescription="@string/todo" />
 
             <com.google.android.material.textfield.TextInputLayout
