--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -21,7 +21,8 @@
             android:layout_height="50dp"
             android:background="@drawable/background"
             android:orientation="horizontal"
-            android:layout_margin="5dp">
+            android:layout_margin="5dp"
+            android:weightSum="5">
 
             <Spinner
                 android:id="@+id/spinner1"
@@ -29,9 +30,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="4"
+                android:background="@android:color/transparent"
                 android:gravity="center"
                 android:padding="8dp"
-                android:background="@android:color/transparent"
                 android:spinnerMode="dropdown" />
 
             <ImageView
@@ -50,7 +51,8 @@
             android:background="@drawable/background"
             android:orientation="horizontal"
             android:layout_margin="5dp"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:visibility="gone">
 
             <Spinner
                 android:id="@+id/spinner2"
@@ -74,16 +76,25 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_below="@+id/layoutone"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/recyclerView"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/layoutone"
         android:layout_marginTop="10dp"
         android:background="@color/white"
-        android:nestedScrollingEnabled="true"/>
+        android:nestedScrollingEnabled="true"
+        android:orientation="vertical"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
+    <TextView
+        android:id="@+id/txtError"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="No data Found"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:textColor="@android:color/holo_red_dark"/>
     <ProgressBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
